  o For wav & au, fix [548256] size in header wrong when piping out.  (robs)
  o Fix IRCAM SF header processing; support all (modern) variants.  (robs)
  o Fix 24-bit read/write on big-endian systems.  (robs)
  o Fix crash trying to open non-existent play-list.  (robs)
  o Fix FLAC read from stdin with libFLAC >= 8.  (Patrick Taylor Ramsey/robs)

Effects:

  o New `splice' effect; splice together audio sections.  (robs)
  o New `remix' effect; complements the mixer effect.  (robs)
  o New `norm' (normalise) effect.  (robs)
  o New `delay' effect; delay one or more channels.  (robs)
  o New `contrast' enhancement effect [FR 708923].  (robs)
  o Rewrite of rate; resample, polyphase, & rabbit now deprecated.  (robs)
  o New `spectrogram' effect; creates a PNG.  (robs)
  o `synth' can now sweep linearly (as well as logarithmically).  (robs)
  o Fix synth max. level setting for some output encodings.  (robs)
  o Fix crash on 64-bit arch. with tempo & key effects.  (Sami Liedes)
  o `gain' alias for the vol effect.  (robs)

Other new features:

  o Now possible to control play-back resampling quality (and hence
    cpu-load) via the PLAY_RATE_ARG environment variable.  (robs)
  o Command line support for multiple file comments.  (robs)
  o Soxi utility to extract/display file header fields.  (robs)
  o Pkg-config support. (Pascal Giard)
  o Basic VU meter.  (robs)
  o Simple heuristic to detect when playing an album and set
    the default replay-gain mode to `album'.  (robs)
  o Better auto-choice of output file format parameters when
    type is different to that of input file.  (robs)
  o SoX now treats (and displays) encoding size & signal precision
    separately.  (robs)
  o Default audio devices (sox), and allow environment variables to
    be used to override the default audio device driver (rec/play)
    and default audio device (all).  (robs)
  o Simpler file info display for `play'.  (robs)
  o Added example0: simpler example of how to use the libSoX effects